--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -115,7 +115,7 @@
 
 <script>
      $.ajax({
-        url: "http://localhost:8080/programs-type",
+        url: "https://school-f6vi.onrender.com/programs-type",
         method: 'get',
         dataType: 'json',
         success:(data)=>{
@@ -144,7 +144,7 @@
             formData.append("receipt", new Blob([null], {type: "application/json"}), "empty");
         }
         $.ajax({
-            url: "http://localhost:8080/transaction",
+            url: "https://school-f6vi.onrender.com/transaction",
             method: "POST",
             contentType: false,
             data: formData,
@@ -157,7 +157,7 @@
     })
 
 
-    $.getJSON("http://localhost:8080/transactions-type", (data)=>{
+    $.getJSON("https://school-f6vi.onrender.com/transactions-type", (data)=>{
         let select = $("#transaction-type");
         data.forEach(type => {
             select.append(`<option value="${type.id}">${type.name}</option>`);
@@ -166,7 +166,7 @@
 
 
     $.ajax({
-        url: "http://localhost:8080/kid",
+        url: "https://school-f6vi.onrender.com/kid",
         method: 'get',
         dataType: 'json',
         success:(data)=>{
@@ -219,7 +219,7 @@
         }
        
         $.ajax({
-            url: "http://localhost:8080/kid",
+            url: "https://school-f6vi.onrender.com/kid",
             method: "POST",
             contentType: false,
             data: formData,
@@ -239,7 +239,7 @@
                 from: new Date().toISOString()
             }
             $.ajax({
-                url: "http://localhost:8080/nutrition",
+                url: "https://school-f6vi.onrender.com/nutrition",
                 method: "POST",
                 contentType: "application/json",
                 data: JSON.stringify(nutrition),
@@ -255,7 +255,7 @@
                 from: new Date().toISOString()
             }
             $.ajax({
-                url: "http://localhost:8080/program",
+                url: "https://school-f6vi.onrender.com/program",
                 method: "POST",
                 contentType: "application/json",
                 data: JSON.stringify(program),
