Update API endpoints to use the production server
- Changed all instances of localhost API URLs to the production server URL (https://school-f6vi.onrender.com) in various HTML and JavaScript files.
- This includes updates to group schedules, staff management, student information, attendance records, and transaction handling.
- Ensured that all AJAX requests point to the correct production endpoints for seamless functionality.

--- a/iframe-content/group-list.html
+++ b/iframe-content/group-list.html
@@ -11,7 +11,7 @@
     <script>
         $(document).ready(function() {
             $.ajax({
-                url: "http://localhost:8080/view/groups-type",
+                url: "https://school-f6vi.onrender.com/view/groups-type",
                 method: 'get',
                 dataType: 'json',
                 success:(data)=>{
@@ -33,7 +33,7 @@
                     $(".wrapper").css("visibility", "hidden");
                     $('#add-entity-modal').fadeIn();
                     $.ajax({
-                        url: "http://localhost:8080/staff",
+                        url: "https://school-f6vi.onrender.com/staff",
                         method: 'get',
                         dataType: 'json',
                         success:(data)=>{
@@ -60,7 +60,7 @@
                     leader: $("#add-club-leader").val()
                 }
                 $.ajax({
-                    url: "http://localhost:8080/groups-type",
+                    url: "https://school-f6vi.onrender.com/groups-type",
                     method: 'post',
                     contentType: 'application/json',
                     data: JSON.stringify(club),
