--- a/iframe-content/staff/staff.html
+++ b/iframe-content/staff/staff.html
@@ -95,7 +95,7 @@
             let urlParams = new URLSearchParams(window.location.search);
             let teacherId = urlParams.get("id");
             if (teacherId) {
-                $.getJSON(`http://localhost:8080/staff/${teacherId}`, function(teacher) {
+                $.getJSON(`https://school-f6vi.onrender.com/staff/${teacherId}`, function(teacher) {
                     $.getJSON("https://yehormovchan.github.io/assets/teacher-links.json", (data)=>{
                         $("#attendance").attr("src", `${data.attendance}?id=${teacherId}`);
                         $("#schedule").attr("src", `${data.schedule}?id=${teacherId}`);
@@ -162,7 +162,7 @@
                 }
                 
                 $.ajax({
-                    url: `http://localhost:8080/staff/${teacherId}`,
+                    url: `https://school-f6vi.onrender.com/staff/${teacherId}`,
                     method: "PUT",
                     contentType: false,
                     data: formData,
@@ -174,7 +174,7 @@
             });
 
             $.getJSON(
-                "http://localhost:8080/staff-payment/" + teacherId,
+                "https://school-f6vi.onrender.com/staff-payment/" + teacherId,
                 (data) => {
                     $("#salary").text(data.salary + " грн");
                 }
@@ -194,7 +194,7 @@
                     reasonOfChange: reason
                 }
                 $.ajax({
-                    url: `http://localhost:8080/staff-payment/update/${teacherId}`,
+                    url: `https://school-f6vi.onrender.com/staff-payment/update/${teacherId}`,
                     method: "POST",
                     contentType: "application/json",
                     data: JSON.stringify(updatedSalary),
@@ -205,7 +205,7 @@
 
             $("#view-salary-history").click(function() {
                 $.getJSON(
-                    `http://localhost:8080/staff-payment/history/${teacherId}`,
+                    `https://school-f6vi.onrender.com/staff-payment/history/${teacherId}`,
                     (history) => {
                         let tableRows = history.map(entry => 
                             `<tr>
@@ -238,7 +238,7 @@
 
             $("#delete-entity").click(function() {
                 $.ajax({
-                    url: `http://localhost:8080/staff/${teacherId}`,
+                    url: `https://school-f6vi.onrender.com/staff/${teacherId}`,
                     method: "DELETE",
                     success: () => window.location.href = "https://yehormovchan.github.io/iframe-content/staff-list.html",
                     error: (errorMessage) => console.log("error" + errorMessage)
