--- a/iframe-content/student/parent.html
+++ b/iframe-content/student/parent.html
@@ -15,7 +15,7 @@
             let kidId = urlParams.get('id');
 
             if (kidId) {
-                $.getJSON(`http://localhost:8080/kid/${kidId}`, function(kid) {
+                $.getJSON(`https://school-f6vi.onrender.com/kid/${kidId}`, function(kid) {
                     $(".request-error").hide()
                     loadParents(kid.mother, "#mother-select", 2);
                     loadParents(kid.father, "#father-select", 1);
@@ -29,7 +29,7 @@
 
             function loadParents(selectedId, selector, sex) {
                 $(".request-error").hide()
-                $.getJSON(`http://localhost:8080/parent`, function(parents) {
+                $.getJSON(`https://school-f6vi.onrender.com/parent`, function(parents) {
                     let filteredParents = parents.filter(p => p.sex === sex);
                     let select = $(selector);
                     select.append('<option value="">Оберіть</option>');
@@ -51,7 +51,7 @@
                 };
 
                 $.ajax({
-                    url: `http://localhost:8080/kid/update/parent/${kidId}`,
+                    url: `https://school-f6vi.onrender.com/kid/update/parent/${kidId}`,
                     method: "POST",
                     contentType: "application/json",
                     data: JSON.stringify(updatedData),
@@ -74,7 +74,7 @@
                     };
 
                     $.ajax({
-                        url: "http://localhost:8080/parent/save",
+                        url: "https://school-f6vi.onrender.com/parent/save",
                         method: "POST",
                         contentType: "application/json",
                         data: JSON.stringify(newParent),
@@ -97,7 +97,7 @@
                     return;
                 }
 
-                $.getJSON(`http://localhost:8080/parent/${parentId}`, function(parent) {
+                $.getJSON(`https://school-f6vi.onrender.com/parent/${parentId}`, function(parent) {
                     $("#edit-parent-name").val(parent.name);
                     $("#edit-parent-phone").val(parent.phone);
                     $("#edit-parent-address").val(parent.homeAddress);
@@ -111,7 +111,7 @@
                         };
                         
                         $.ajax({
-                            url: `http://localhost:8080/parent/update/${parentId}`,
+                            url: `https://school-f6vi.onrender.com/parent/update/${parentId}`,
                             method: "POST",
                             contentType: "application/json",
                             data: JSON.stringify(updatedParent),
