--- a/iframe-content/programs/groups.html
+++ b/iframe-content/programs/groups.html
@@ -23,11 +23,11 @@
     <script>
          $(document).ready(function() {
             const urlParams = new URLSearchParams(window.location.search);
-            const programId = urlParams.get("id");
+            const programId = urlParams.get("id"); 
             let currentPrograms = new Set();
 
             function loadProgramGroups() {
-                $.getJSON(`http://localhost:8080/view/program-groups/program=${programId}`, function(data) {
+                $.getJSON(`https://school-f6vi.onrender.com/view/program-groups/program=${programId}`, function(data) {
                     currentPrograms.clear();
                     let groupList = "";
                     data.forEach(group => {
@@ -40,7 +40,7 @@
             }
 
             function loadgroups() {
-                $.getJSON("http://localhost:8080/groups-type", function(data) {
+                $.getJSON("https://school-f6vi.onrender.com/groups-type", function(data) {
                     let options = "";
                     data.forEach(group => {
                         if (!currentPrograms.has(group.id)) {
@@ -56,7 +56,7 @@
             $("#program-groups").on("click", "#delete-group", function() {
                 const id = $(this).data("id");
                 $.ajax({
-                    url: `http://localhost:8080/program-groups/${id}`,
+                    url: `https://school-f6vi.onrender.com/program-groups/${id}`,
                     type: "DELETE",
                     success: function() {
                         loadProgramGroups();
@@ -74,7 +74,7 @@
                     _group: groupId
                 };
                 $.ajax({
-                    url: "http://localhost:8080/program-groups",
+                    url: "https://school-f6vi.onrender.com/program-groups",
                     type: "POST",
                     contentType: "application/json",
                     data: JSON.stringify(data),
