--- a/iframe-content/programs/program-members.html
+++ b/iframe-content/programs/program-members.html
@@ -49,7 +49,7 @@
             let currentMemberIds = new Set();
 
             function loadProgramMembers() {
-                $.getJSON(`http://localhost:8080/view/program/program=${programId}`, function(data) {
+                $.getJSON(`https://school-f6vi.onrender.com/view/program/program=${programId}`, function(data) {
                     $(".kid-program-new").text(data[0].programName || "");
                     currentMemberIds.clear();
                     let membersList = "";
@@ -63,7 +63,7 @@
             }
 
             function loadKids() {
-                $.getJSON("http://localhost:8080/kid", function(data) {
+                $.getJSON("https://school-f6vi.onrender.com/kid", function(data) {
                     let options = "";
                     data.forEach(kid => {
                         if (!currentMemberIds.has(kid.id)) {
@@ -78,7 +78,7 @@
             
             $("#program-members").on("click", ".edit-program-button", function(){
                 const kidId = $(this).data("id");
-                $.getJSON(`http://localhost:8080/programs-type`, function(programTypes) {
+                $.getJSON(`https://school-f6vi.onrender.com/programs-type`, function(programTypes) {
                     $("#program-list").empty();
                     $("#edit-kid-confirm-button").data("id", kidId);
                     programTypes.forEach(program => {
@@ -90,7 +90,7 @@
 
             $("#add-kid").on("click", () => {
                 const kidId = $("#kid-select").val();
-                $.getJSON(`http://localhost:8080/view/program/kid=${kidId}`, (data)=>{
+                $.getJSON(`https://school-f6vi.onrender.com/view/program/kid=${kidId}`, (data)=>{
                     $(".kid-program-old").text(data.programName);
                     $("#add-kid-confirm-modal").fadeIn();
                 })
@@ -113,7 +113,7 @@
                     reasonOfChange: $("#reason-of-change-edit-input").val()
                 }
                 $.ajax({
-                    url: `http://localhost:8080/program/${kidId}`,
+                    url: `https://school-f6vi.onrender.com/program/${kidId}`,
                     contentType: "application/json",
                     data: JSON.stringify(newProgram),
                     type: "POST",
@@ -131,7 +131,7 @@
                     reasonOfChange: $("#reason-of-change-edit-input").val()
                 }
                 $.ajax({
-                    url: `http://localhost:8080/program/${kidId}`,
+                    url: `https://school-f6vi.onrender.com/program/${kidId}`,
                     contentType: "application/json",
                     data: JSON.stringify(newProgram),
                     type: "POST",
