fix: update API endpoint for program editing

--- a/iframe-content/student/kid.html
+++ b/iframe-content/student/kid.html
@@ -211,7 +211,7 @@
                 };
                 
                 $.ajax({
-                    url: `https://school-f6vi.onrender.com/program/edit/${kidId}`,
+                    url: `https://school-f6vi.onrender.com/program/${kidId}`,
                     method: "POST",
                     contentType: "application/json",
                     data: JSON.stringify(updatedProgram),
