fix: trigger filter button click using jQuery trigger method for date initialization

--- a/iframe-content/staff/staff-attendance.html
+++ b/iframe-content/staff/staff-attendance.html
@@ -75,7 +75,6 @@
                     if(user.role == "TEACHER") {
                         $("#create-attendance-side-menu").fadeIn();
                         $("#attendance-date").val(new Date().toISOString().split('T')[0]);
-                        $("filter-button").click();
                     }
                 }
             });
@@ -90,7 +89,7 @@
             });
             $("#date-from").val(new Date().toISOString().split('T')[0]);
             $("#date-to").val(new Date().toISOString().split('T')[0]);
-            $("filter-button").click();
+            $("filter-button").trigger("click");
             
             $("#filter-button").click(function() {
                 let dateFrom = $("#date-from").val();
