fix: include program name in program link and update staff modal label

--- a/iframe-content/program-list.html
+++ b/iframe-content/program-list.html
@@ -19,7 +19,7 @@
                 
                     data.forEach(program => {
                         container.append(`
-                                <a href="https://yehormovchan.github.io/iframe-content/programs/program?id=${program.id}">
+                                <a href="https://yehormovchan.github.io/iframe-content/programs/program?id=${program.id}&name=${program.name}">
                                     <li>
                                         <span><strong>${program.name} </strong></span>
                                     </li>
