--- a/iframe-content/staff-list.html
+++ b/iframe-content/staff-list.html
@@ -31,7 +31,7 @@
 
     <div class="modal hidden" id="add-entity-modal">
         <div class="wrapper edit-wrapper">
-            <label>Ім'я вчителя: <input type="text" id="add-staff-name"></label><br>
+            <label>Ім'я працівника: <input type="text" id="add-staff-name"></label><br>
             <label>Вчитель: <input type="checkbox" id="add-staff-teacher"></label><br>
             <label>Посада: <input number="text" min="1" max="11" id="add-staff-position"></label><br>
             <label>Номер телфону: <input type="text" id="add-staff-phone"></label><br>
