fix: add required attribute to input fields for validation

--- a/iframe-content/group-list.html
+++ b/iframe-content/group-list.html
@@ -88,8 +88,8 @@
         <div class="loader" id="add-entity-modal-loader"></div>
         <div class="request-error" id="add-entity-modal-error">Сталася помилка, спробуйте пізніше.</div>
         <div class="wrapper edit-wrapper">
-            <label>Назва гуртка: <input type="text" id="add-club-name"></label><br>
-            <label>Ціна: <input type="number" id="add-club-price"></label><br>
+            <label>Назва гуртка: <input type="text" id="add-club-name" required></label><br>
+            <label>Ціна: <input type="number" id="add-club-price" required></label><br>
             <label>Інформація про гурток: <textarea id="add-club-info"></textarea></label><br>
             <label>Керівник гуртка: <select id="add-club-leader"></select></label><br>
             <button id="add-entity-button">Додати</button>
