--- a/iframe-content/groups/group.html
+++ b/iframe-content/groups/group.html
@@ -23,8 +23,8 @@
     <div id="edit-group-modal" class="modal hidden">
         <div class="edit-wrapper wrapper">
                 <h2>Редагування гуртка</h2>
-                <label>Назва: <input type="text" id="edit-group-name"></label><br>
-                <label>Вартість: <input type="number" id="edit-group-price"></label><br>
+                <label>Назва: <input type="text" id="edit-group-name" required></label><br>
+                <label>Вартість: <input type="number" id="edit-group-price" required></label><br>
                 <label>Інформація про гурток: <textarea type="date" id="edit-group-info"></textarea></label><br>
                 <label>Керівник гуртка:  <select name="leader-list" id="leader-list"></select></label>
                 <button id="save-group">Зберегти</button><br>
