--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -34,8 +34,8 @@
 
     <div class="modal hidden" id="add-entity-modal">
         <div class="wrapper edit-wrapper">
-            <label>Ім'я учня: <input type="text" id="add-kid-name"></label><br>
-            <label>Клас: <input number="text" min="1" max="11" id="add-kid-grade"></label><br>
+            <label>Ім'я учня: <input type="text" id="add-kid-name" required></label><br>
+            <label>Клас: <input number="text" min="1" max="11" id="add-kid-grade" required></label><br>
             <label>Навчається в школі: <label id="student-label"><input type="checkbox" id="add-kid-student"></label></label><br>
             <label>Дата народження: <input type="date" id="add-kid-birthday"></label><br>
             <label>Свідоцтво про народження: <input type="file" id="add-kid-birth-certificate"></label><br>
