--- a/iframe-content/program-list.html
+++ b/iframe-content/program-list.html
@@ -85,9 +85,9 @@
 
     <div class="modal hidden" id="add-entity-modal">
         <div class="wrapper edit-wrapper">
-            <label>Назва програми: <input type="text" id="add-program-name"></label><br>
+            <label>Назва програми: <input type="text" id="add-program-name" required></label><br>
             <label>Інформація про програму: <textarea id="add-program-info"></textarea></label><br>
-            <label>Вартість програми: <input type="number" id="add-program-price"></label><br>
+            <label>Вартість програми: <input type="number" id="add-program-price" required></label><br>
             <button id="add-program-button">Додати</button>
             <button id="close-entity-modal" onclick="$('#add-entity-modal').fadeOut()">Закрити</button>
         </div>
