--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -24,8 +24,8 @@
     <div id="edit-program-modal" class="modal hidden">
         <div class="edit-wrapper wrapper">
                 <h2>Редагування програми</h2>
-                <label>Назва: <input type="text" id="edit-program-name"></label><br>
-                <label>Вартість: <input type="number" id="edit-program-price"></label><br>
+                <label>Назва: <input type="text" id="edit-program-name" required></label><br>
+                <label>Вартість: <input type="number" id="edit-program-price" required></label><br>
                 <label>Причина зміни вартості: <input type="text" id="edit-program-price-reason"></label>
                 <label>Інформація про програму: <textarea type="date" id="edit-program-info"></textarea></label><br>
                 <button id="save-edit-program">Зберегти</button><br>
