--- a/iframe-content/staff/staff.html
+++ b/iframe-content/staff/staff.html
@@ -54,10 +54,10 @@
     <div id="edit-teacher-modal" class="modal hidden">
         <div class="edit-wrapper wrapper">
             <h2>Редагування інформації про вчителя</h2>
-            <label>Ім'я: <input type="text" id="edit-teacher-name"></label><br>
-            <label>Посада: <input type="text" id="edit-teacher-position"></label><br>
-            <label>Телефон: <input type="text" id="edit-teacher-phone"></label><br>
-            <label>Номер паспорта: <input type="text" id="edit-teacher-passport"></label><br>
+            <label>Ім'я: <input type="text" id="edit-teacher-name" required></label><br>
+            <label>Посада: <input type="text" id="edit-teacher-position" required></label><br>
+            <label>Телефон: <input type="text" id="edit-teacher-phone" required></label><br>
+            <label>Номер паспорта: <input type="text" id="edit-teacher-passport" required></label><br>
             <label>Додаткова інформація: <textarea id="edit-teacher-info"></textarea></label><br>
             <label>Вчитель <input type="checkbox" id="edit-teacher-teacher"></label><br>
             <label>Копія паспорта: <input type="file" id="upload-passport" accept="image/*"></label><br>
