--- a/iframe-content/staff-list.html
+++ b/iframe-content/staff-list.html
@@ -31,14 +31,14 @@
 
     <div class="modal hidden" id="add-entity-modal">
         <div class="wrapper edit-wrapper">
-            <label>Ім'я працівника: <input type="text" id="add-staff-name"></label><br>
+            <label>Ім'я працівника: <input type="text" id="add-staff-name" required></label><br>
             <label>Вчитель: <input type="checkbox" id="add-staff-teacher"></label><br>
-            <label>Посада: <input number="text" min="1" max="11" id="add-staff-position"></label><br>
-            <label>Номер телфону: <input type="text" id="add-staff-phone"></label><br>
+            <label>Посада: <input number="text" min="1" max="11" id="add-staff-position" required></label><br>
+            <label>Номер телфону: <input type="text" id="add-staff-phone" required></label><br>
             <label>Додаткова інформація: <textarea id="add-staff-info"></textarea></label><br>
-            <label>Номер паспорту: <input type="text" id="add-staff-passport-number"></label><br>
+            <label>Номер паспорту: <input type="text" id="add-staff-passport-number" required></label><br>
             <label>Копія паспорту: <input type="file" id="add-staff-passport-copy"></label><br>
-            <label>Заробітня плата: <input type="number" id="add-staff-salary"></label><br>
+            <label>Заробітня плата: <input type="number" id="add-staff-salary" required></label><br>
             <button id="add-staff-button">Додати</button>
             <button id="close-entity-modal" onclick="$('#add-entity-modal').fadeOut()">Закрити</button>
         </div>
