fix: enforce link visibility style with !important

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://yehormovchan.github.io/static/script.js"></script>
     <style>
         a{
-            display: none;
+            display: none !important; 
         }
     </style>
 </head>
