fix: correct variable reference in link visibility logic

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                    
                     aList.forEach(element => {
                         if(permits.includes(element.id)){
-                            e.style.display = "block";
+                            element.style.display = "block";
                         }
                     });
                 })
