fix: refactor parent loading logic for better readability and maintainability

--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -156,6 +156,8 @@
         });
     })
 
+    $("#save-parent").click()
+
 
     $.getJSON("https://school-f6vi.onrender.com/transactions-type", (data)=>{
         let select = $("#transaction-type");
